[gd_scene load_steps=2 format=3 uid="uid://cuflys3rlwkjc"]

[ext_resource type="Script" path="res://instances/debug_view.gd" id="1_vmgr1"]

[node name="debug_view" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_vmgr1")
metadata/_edit_lock_ = true

[node name="frame" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="top" type="ColorRect" parent="frame"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
color = Color(0.396078, 0.121569, 0.0941176, 1)

[node name="hb" type="HBoxContainer" parent="frame/top"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="lb_fps" type="Label" parent="frame/top/hb"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "total obj:"

[node name="empty" type="Control" parent="frame/top/hb"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="lb4" type="Label" parent="frame/top/hb"]
auto_translate_mode = 1
layout_mode = 2
text = "total obj:"

[node name="lb_tot_obj" type="Label" parent="frame/top/hb"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "250"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sep3" type="VSeparator" parent="frame/top/hb"]
auto_translate_mode = 1
layout_mode = 2

[node name="lb3" type="Label" parent="frame/top/hb"]
auto_translate_mode = 1
layout_mode = 2
text = "mouse:"

[node name="lb_mouse_pos" type="Label" parent="frame/top/hb"]
unique_name_in_owner = true
layout_mode = 2
text = "(1000,1000)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sep2" type="VSeparator" parent="frame/top/hb"]
auto_translate_mode = 1
layout_mode = 2

[node name="cl_hover" type="ColorRect" parent="frame/top/hb"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
color = Color(0.295082, 0.478021, 0.223508, 1)

[node name="lb2" type="Label" parent="frame/top/hb/cl_hover"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "is on UI element"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cl_win" type="ColorRect" parent="frame/top/hb"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
color = Color(0.295082, 0.478021, 0.223508, 1)

[node name="lb5" type="Label" parent="frame/top/hb/cl_win"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "is on window"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cl_title_flag" type="ColorRect" parent="frame/top/hb"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
color = Color(0.295082, 0.478021, 0.223508, 1)

[node name="lb1" type="Label" parent="frame/top/hb/cl_title_flag"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "is on title bar"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cl_decoration" type="ColorRect" parent="frame/top/hb"]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
color = Color(0.295082, 0.478021, 0.223508, 1)

[node name="lb5" type="Label" parent="frame/top/hb/cl_decoration"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "is on decoration"
horizontal_alignment = 1
vertical_alignment = 1

[node name="mid" type="Control" parent="frame"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="vb" type="VBoxContainer" parent="frame/mid"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 21.0
offset_top = 14.0
offset_right = 233.0
offset_bottom = -14.0
grow_vertical = 2
mouse_filter = 2

[node name="btn_launch_game" type="Button" parent="frame/mid/vb"]
layout_mode = 2
text = "Launch Game"

[node name="btn_close_game" type="Button" parent="frame/mid/vb"]
layout_mode = 2
text = "Close Game"

[node name="bot" type="ColorRect" parent="frame"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
color = Color(0.396078, 0.121569, 0.0941176, 1)

[connection signal="pressed" from="frame/mid/vb/btn_launch_game" to="." method="_on_btn_launch_game_pressed"]
[connection signal="pressed" from="frame/mid/vb/btn_close_game" to="." method="_on_btn_close_game_pressed"]
